quote feature in telegram and minor cleanup

--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,8 @@ PERSONA_PRODUCT_IDEAS_ENABLED=true
 
 # LLM Configuration
 OLLAMA_BASE_URL=http://localhost:11434/v1
-OLLAMA_MODEL=llama3:8b-instruct-q4_K_M
+OLLAMA_MODEL_FAST=mistral:instruct
+OLLAMA_MODEL_SLOW=llama3:8b-instruct-q4_K_M
 
 # Database
 DATABASE_PATH=data/digest.db
@@ -21,7 +22,8 @@ REDDIT_USER_AGENT=DigestBot/1.0
 
 # Email Delivery
 EMAIL_ENABLED=false
-EMAIL_SMTP_HOST=smtp.gmail.com
+EMAIL_SMTP_HOST=smtp.gmail.
+com
 EMAIL_SMTP_PORT=587
 EMAIL_FROM=your@email.com
 EMAIL_TO=recipient@email.com
